kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecoliza-backend
  labels:
    app: ecoliza-backend
spec:
  selector:
    matchLabels:
      app: ecoliza-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: ecoliza-backend
    spec:
      containers:
      - name: ecoliza-backend
        image: 411470295704.dkr.ecr.us-east-1.amazonaws.com/ecoliza-backend
        ports:
        - containerPort: 3333
