kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-back-ecoliza
  namespace: main-namespace
  labels: 
    app: ecoliza-backend
spec:
  selector:
    app: ecoliza-backend
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
  type: NodePort
