kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Healthcheck
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-path: /usermgmt/health-status
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-interval: '15'
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-timeout: '5'
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "2"
    alb.ingress.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "2"

spec:
  rules:
  - host: api.ecoliza.tk
    http:
      paths:
      - backend:
          serviceName: service-back-ecoliza
          servicePort: 80
